--- a/ALLIANCE F3 GEORAPHY.HTML
+++ b/ALLIANCE F3 GEORAPHY.HTML
@@ -36,7 +36,7 @@
             .geof3
             {
                 width: 100%;
-                height:500px ;
+                height:auto ;
 
             }
 
