--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
        <ul>
         <li><button><a href="KLB MATH F1 NEW edition.pdf">KLB MATH F1</a></button></li>
         <li><button><a href="KLB MATH F2 NEW edition.pdf">KLB MATH F2 NOTES</a></button></li>
-        <li><button><a href="ALLIANCE F3 GEORAPHY.HTML">ALLIANCE BOYS HIGHSCHOOL F3 GEOGRAPHY NOTES BY LEC RAKDAFHA</a></button></li>
+         <li><button><a href="ALLIANCE BOYS HIGHSCHOOL F3 GEOGRAPHY NOTES BY LEC RAKDAFHA.pdf">GEOGRAPHY FORM3 NOTES</a></button></li>
        </ul>
 
     </div>
