--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <li><button><a href="KLB MATH F1 NEW edition.pdf">KLB MATH F1 NOTES</a></button></li>
         <li><button><a href="KLB MATH F2 NEW edition.pdf">KLB MATH F2 NOTES</a></button></li>
         <li><button><a href="BIOLOGY F3 BY LEC RAKDAFHA.pdf">BIOLOGY F3 NOTES</a></button></li>
-        <li><button><a href="ALLIANCE BOYS HIGHSCHOOL F3 GEOGRAPHY NOTES BY LEC RAKDAFHA.pdf">GEOGRAPHY FORM3 NOTES</a></button></li>
+        <li><button><a href="ALLIANCE BOYS HIGHSCHOOL F3 GEOGRAPHY NOTES BY LEC RAKDAFHA.pdf">GEOGRAPHY F3 NOTES</a></button></li>
         <li><button><a href="GEOGRAPHY F4 NOTES BY LEC RAKDAFHA.pdf">GEOGRAPHY F4 NOTES</a></button></li></li>
          <Li><button><a href="BUSINESS STUDIES FORM1 NOTES.pdf">BUSINESS STUDIES F1 NOTES</a></button></Li>  
        </ul>
