--- a/index.html
+++ b/index.html
@@ -50,13 +50,33 @@
                 <button type="button" class="btn btn-form3" style="background-color: rgb(13, 1, 41); color: white;"><A href="form3 subjects.html">Form3</A></button>
                 <button type="button" class="btn btn-form4" style="background-color: rgb(38, 0, 128); color: white;"><a href="form4 subjects.html">Form4</a></button>
             </div>
-
-            <button>Additional Services</button>
-           
-
- 
+         <div style="color: white;">
+            <button class="klb">Physics Paper 2 Topics</button>
+            <ol>
+                <li>RECTILINEAR PROPAGATON OF LIGHT AND REFLECTION AT PLANE MIRRORS </li>
+                <li>ELECTROSTATICS 1 AND 2 </li>
+                <li>CURRENT ELECTRICITY 1 AND 2 </li>
+                <li>MAGNETISM </li> 
+                <li>REFLECTION AT CURVED SURFACE </li>
+                <li>MAGNETIC EFFECT OF ELECTRIC CURRENT</li>
+                <li>SOUND </li>
+                <li>WAVES 1 AND 2 </li>
+                <li>REFRACTION OF LIGHT </li>
+                <li>HEATING EFFECT OF ELECTRIC CURRENT </li>
+                <li>THIN LENSES </li> 
+                <li>ELECTROMAGNETIC SPECTRUM </li>
+                <li>ELECTROMAGNETIC INDUCTION </li>
+                <li>MAINS ELECTRICITY </li>
+                <li>CATHODE RAYS</li>
+                <li>X – RAYS </li>
+                <li>PHOTOELECTRIC EFFECT  
+                <li>ELECTRONICS</li>
+                <li>RADIOACTIVITY </li> 
+                 <button><A href="PHYSICS PAPER 2 TOPICS NOTES.pdf">PHYSICS PAPER 2 TOPICS NOTES IN PDF</A></button>
+             </ol>
+        </div>
     </body>
     <footer>
         copyright &#169 kcse university express
-                </footer>
+     </footer>
 </html>
