--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <button type="button" class="btn btn-form4" style="background-color: rgb(38, 0, 128); color: white;"><a href="form4 subjects.html">Form4</a></button>
             </div>
          <div style="color: white;">
-            <button class="klb">Physics Paper 2 Topics</button>
+            <button class="klb">KCSE Physics Paper 2 Topics</button>
             <ol>
                 <li>RECTILINEAR PROPAGATON OF LIGHT AND REFLECTION AT PLANE MIRRORS </li>
                 <li>ELECTROSTATICS 1 AND 2 </li>
