--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </head>
     <body class="body m-3">
-        <div>
+        <div class="description">
         <p>
             Welcome to our platform! We offer a comprehensive range of KCSE past papers and notes to support students in their studies. Our resources are designed to help students excel in their exams and achieve academic success.
         </p>
