--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <body class="body m-3">
         <div class="description">
         <p>
-            Welcome to our platform! We offer a comprehensive range of KCSE past papers and notes to support students in their studies. Our resources are designed to help students excel in their exams and achieve academic success.
+            Welcome to our platform! We offer a comprehensive range of KCSE past papers and notes to support students in their studies.
         </p>
     </div>
     <div>
